<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_replay_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_save_24" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="117dp"
        android:layout_height="45dp"
        android:layout_marginTop="80dp"
        android:text="@string/checkbox2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlay" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="117dp"
        android:layout_height="45dp"
        android:text="@string/checkbox4"
        app:layout_constraintEnd_toStartOf="@+id/checkBox5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkBox5" />

    <CheckBox
        android:id="@+id/checkBox14"
        android:layout_width="117dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:text="@string/checkbox14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox11" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="117dp"
        android:layout_height="45dp"
        android:text="@string/checkbox3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox2"
        app:layout_constraintTop_toTopOf="@+id/checkBox2" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="117dp"
        android:layout_height="45dp"
        android:text="@string/checkbox7"
        app:layout_constraintEnd_toStartOf="@+id/checkBox8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkBox8" />

    <CheckBox
        android:id="@+id/checkBox11"
        android:layout_width="117dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:text="@string/checkbox11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox8" />

    <CheckBox
        android:id="@+id/checkBox10"
        android:layout_width="117dp"
        android:layout_height="45dp"
        android:text="@string/checkbox10"
        app:layout_constraintEnd_toStartOf="@+id/checkBox11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkBox11" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="117dp"
        android:layout_height="45dp"
        android:text="@string/checkbox1"
        app:layout_constraintEnd_toStartOf="@+id/checkBox2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkBox2" />

    <CheckBox
        android:id="@+id/checkBox12"
        android:layout_width="117dp"
        android:layout_height="45dp"
        android:text="@string/checkbox12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox11"
        app:layout_constraintTop_toTopOf="@+id/checkBox11" />

    <CheckBox
        android:id="@+id/checkBox13"
        android:layout_width="117dp"
        android:layout_height="45dp"
        android:text="@string/checkbox13"
        app:layout_constraintEnd_toStartOf="@+id/checkBox14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkBox14" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="117dp"
        android:layout_height="45dp"
        android:text="@string/checkbox6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox5"
        app:layout_constraintTop_toTopOf="@+id/checkBox5" />

    <CheckBox
        android:id="@+id/checkBox9"
        android:layout_width="117dp"
        android:layout_height="45dp"
        android:text="@string/checkbox9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox8"
        app:layout_constraintTop_toTopOf="@+id/checkBox8" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="117dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:text="@string/checkbox5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="117dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:text="@string/checkbox8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

    <CheckBox
        android:id="@+id/checkBox15"
        android:layout_width="117dp"
        android:layout_height="45dp"
        android:text="@string/checkbox15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox14"
        app:layout_constraintTop_toTopOf="@+id/checkBox14" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_play_arrow_24"
        tools:layout_editor_absoluteY="115dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonPlay"
        app:layout_constraintTop_toBottomOf="@+id/textClassName"
        app:srcCompat="@drawable/ic_baseline_skip_next_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintEnd_toStartOf="@+id/buttonPlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textClassName"
        app:srcCompat="@drawable/ic_baseline_skip_previous_24" />

    <TextView
        android:id="@+id/textFileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/textFileName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textClassName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textClassName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFileName" />

</androidx.constraintlayout.widget.ConstraintLayout>